tests/object_is/object_is.exp
Error: object_is.js:20
 20: var b: string = Object.is('a', 'a');
                     ^^^^^^^^^^^^^^^^^^^ boolean. This type is incompatible with
 20: var b: string = Object.is('a', 'a');
            ^^^^^^ string

Error: object_is.js:22
 22: var d: boolean = Object.is('a', 'b', 'c'); // Error - 'c' is unused
                                          ^^^ unused function argument. No more than 2 arguments are expected by
 41:     static is(a: any, b: any): boolean;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:41


Found 2 errors
